--- a/TareaApp/templates/base.html
+++ b/TareaApp/templates/base.html
@@ -4,10 +4,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aplicacion de Tareas</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css">
 </head>
 <body>
-
-    
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="/">Django App</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+              <li class="nav-item"> 
+                      <a class="nav-link"  href="/">Inicio</a>
+                      {% if user.is_authenticated %}
+                  </li>            
+                       
+                  <li class="nav-item"> 
+                      <a class="nav-link" href="/logout">Cerrar Sesion</a>
+                  </li>
+                  {% else %}
+                  <li class="nav-item"> 
+                      <a class="nav-link" href="/registro">Registrarse</a>
+                  </li>
+                  <li class="nav-item"> 
+                      <a class="nav-link" href="/inicio">Iniciar sesión</a>
+                  </li>
+                  {% endif %}
+            </ul>
+          </div>
+        </div>
+      </nav>
     {% block content %}
     {% endblock %}
 </body>
