--- a/TareaApp/templates/base.html
+++ b/TareaApp/templates/base.html
@@ -18,14 +18,19 @@
               <li class="nav-item"> 
                       <a class="nav-link"  href="/">Inicio</a>
                       {% if user.is_authenticated %}
-                  </li>            
-                       
+                  </li> 
+                  <li class="nav-item">
+                    <a class="nav-link" href="{% url 'vistatarea' %}">Vista Tareas</a>
+                  </li> 
+                  <li class="nav-item">
+                    <a class="nav-link" href="/tareas/crear">Crear Tarea</a>
+                  </li>         
                   <li class="nav-item"> 
                       <a class="nav-link" href="/logout">Cerrar Sesion</a>
                   </li>
                   {% else %}
                   <li class="nav-item"> 
-                      <a class="nav-link" href="/registro">Registrarse</a>
+                      <a class="nav-link" href="/registrar">Registrarse</a>
                   </li>
                   <li class="nav-item"> 
                       <a class="nav-link" href="/inicio">Iniciar sesión</a>
