Terminando el CRUD

--- a/TareaApp/templates/casa.html
+++ b/TareaApp/templates/casa.html
@@ -5,11 +5,9 @@
 <main class="container py-5">
     <section class="card card-body">
         <h1 class="display-1 text-center">
-            Django app
+           Aplicacion Web de Administracion de Documentos de Asunto.
         </h1>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore, quaerat aspernatur at excepturi eum nisi laudantium ipsum repellendus repellat. Doloremque qui consequatur quia voluptates pariatur aperiam, voluptatum hic debitis ducimus!
-        </p>
+        <p>Esta es una aplicacion web, de tareas con complemento de gestion de archivos, para crear, eliminar, actualizar y leer tareas asignadas a un usuario.</p>
         <div class="text-center">
            <a class="btn btn-secondary" href="/inicio/">
             Iniciar Sesion
