--- a/TareaApp/templates/base.html
+++ b/TareaApp/templates/base.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">Django App</a>
+          <a class="navbar-brand" href="/">AD pwf Project</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -20,7 +20,10 @@
                       {% if user.is_authenticated %}
                   </li> 
                   <li class="nav-item">
-                    <a class="nav-link" href="{% url 'vistatarea' %}">Vista Tareas</a>
+                    <a class="nav-link" href="{% url 'vistatarea' %}">Tareas Pendientes</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="/tareas_completadas">Tareas Completadas</a>
                   </li> 
                   <li class="nav-item">
                     <a class="nav-link" href="/tareas/crear">Crear Tarea</a>
