--- a/TareaApp/templates/Vtareas.html
+++ b/TareaApp/templates/Vtareas.html
@@ -4,7 +4,7 @@
 <main class="container">
     <div class="row justify-content-center">
         <div class="col-md-8">
-            <h1 class="text-center display-3 py-5">Vista de tareas Pendientes</h1>
+            <h1 class="text-center display-3 py-5">Tareas:</h1>
 
             <ul class="list-group">
                 {% for task in tasks %}
