--- a/TareaApp/templates/registrarse.html
+++ b/TareaApp/templates/registrarse.html
@@ -1,15 +1,32 @@
 
 {% extends 'base.html' %}
 {% block content %}
+<main class="container">
+    <div class="row">
+        <div class="col-md-4 offset-md-4 mt-5">
+            <form method="POST" class="card card-body">
+                <h1> Registrarse como Nuevo Usuario</h1>
+                    {{error}}
+                    {% csrf_token %}
+                    <div class="mb-3">
+                        <label for="username">Usuario:</label>
+                        <input type="text" name="username" id="username" class="form-control" placeholder="Escribe tu nombre de usuario.">
+                    </div>
 
-<h1> Registrarse como Nuevo Usuario</h1>
-{{error}}
-
-<form method="post">
- {% csrf_token %}
- {{form.as_p}}
- <button> Registrarse </button>
-</form>
+                    <div class="mb-3">
+                        <label for="password1">Contraseña:</label>
+                        <input type="password" name="password1" id="password1" class="form-control" placeholder="Escribe tu contraseña">
+                    </div>
+                    <div class="mb-3">
+                        <label for="password2">Confirmar contraseña:</label>
+                        <input type="password" name="password2" id="password2" class="form-control" placeholder="Confirma tu contraseña.">
+                    </div>
+                <button class="btn btn-dark">Guardar</button>
+            </form>
+        </div>
+    </div>
+</main>
+                    
 
 
 {% endblock  %}
