--- a/TareaApp/templates/casa.html
+++ b/TareaApp/templates/casa.html
@@ -5,9 +5,10 @@
 <main class="container py-5">
     <section class="card card-body">
         <h1 class="display-1 text-center">
-           Aplicacion Web de Administracion de Documentos de Asunto.
+           Bienvenido uwu  !!!
         </h1>
-        <p>Esta es una aplicacion web, de tareas con complemento de gestion de archivos, para crear, eliminar, actualizar y leer tareas asignadas a un usuario.</p>
+     
+        <p>Aplicacion Web de Administracion de Documentos de Asunto. Esta es una aplicacion web, de tareas con complemento de gestion de archivos, para crear, eliminar, actualizar y leer tareas asignadas a un usuario.</p>
         <div class="text-center">
            <a class="btn btn-secondary" href="/inicio/">
             Iniciar Sesion
