--- a/TareaApp/templates/detalles_T.html
+++ b/TareaApp/templates/detalles_T.html
@@ -8,27 +8,27 @@
             <h1 class="text-secondary">{{task.titulo}}</h1>
     
             {{error}}
-            <form method="POST">
+            <form method="POST" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{form.as_p}}
+                
                 <button class="btn btn-dark">
                     Actualizar
                 </button>
             </form>
 
-        <div>
-            <form action="{% url 'complete_tarea' task.id %}" method="POST">
-                {% csrf_token %}
-                <button class="btn btn-secondary">Completado</button>
-            </form>
-            <form action="{% url 'delete_tarea' task.id %}" method="POST">
-                {% csrf_token %}
-                <button class="btn btn-danger">Eliminar</button>
-            </form>
-              
-        </div>
+            <div>
             
-        
+                <form action="{% url 'complete_tarea' task.id %}" method="POST">
+                    {% csrf_token %}
+                    <button class="btn btn-secondary">Completado</button>
+                </form>
+                <form action="{% url 'delete_tarea' task.id %}" method="POST">
+                    {% csrf_token %}
+                    <button class="btn btn-danger">Eliminar</button>
+                </form>
+            
+            </div>
         </div>
     </div>
 </main>
