--- a/TareaApp/templates/base.html
+++ b/TareaApp/templates/base.html
@@ -9,7 +9,11 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/">AD pwf Project</a>
+          <a class="navbar-brand" href="/">
+            <!--{% load static %}-->
+            <!--img src="{% static 'image/logo.png' %}" alt="Logo"-->
+            AD pwf Project</a>
+           <!-- Mostrar la imagen -->
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
