--- a/TareaApp/templates/casa.html
+++ b/TareaApp/templates/casa.html
@@ -3,8 +3,8 @@
 {% block content%}
 
 <main class="container py-5">
-    <section class="card card-body">
-        <h1 class="display-1 text-center">
+    <section class="card card-body" >
+        <h1 class="display-1 text-center" style="color: ##8F3A84; font-family: 'Arial Black', sans-serif;">
            Bienvenido uwu  !!!
         </h1>
      
